--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,8 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.MyActivity"/>
 
+        <activity android:name=".Activities.MyActivity"/>
+        <activity android:name=".Activities.LogInActivity"/>
+        <activity android:name=".Activities.StudentActivity"/>
+        <activity android:name=".Activities.TeacherActivity"/>
 
 
         <service android:name=".Service.ManagerRegistrationService"/>
