--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".Activities.MobileSchoolActivity"/>
         <activity android:name=".Activities.MyActivity"/>
         <activity android:name=".Activities.LogInActivity"/>
         <activity android:name=".Activities.StudentActivity"/>
