--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name=".EntryActivity"
@@ -19,12 +22,15 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ClassEntryActivity" android:taskAffinity="com.android.phone"/>
         <activity android:name=".Activities.SchoolActivity" android:theme="@android:style/Theme.Holo.Light"/>
-        <activity android:name=".Activities.StudentWaitingActivity"/>
+        <activity android:name=".Activities.Student.StudentWaitingActivity"/>
+        <activity android:name=".Activities.Teacher.TeacherWaitingActivity"/>
+        <activity android:name=".Activities.Student.StudentProfileActivity"/>
+        <activity android:name=".Activities.Teacher.TeacherProfileActivity"/>
         <activity android:name=".Activities.DialogBox"
                   android:label="DialogBox"
-                  android:theme="@android:style/Theme.Holo.Light.Dialog"/>
-
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
 
         <service android:name=".Service.ManagerRegistrationService"/>
         <service android:name="com.parse.PushService" />
@@ -42,6 +48,8 @@
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
         </receiver>
+
+        <receiver android:name=".BroadCastReceiver.TelephonyBroadcastReceiver"/>
 
         <receiver android:name=".Communication.PushReceiver"/>
 
