--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:name=".Utils.GlobalApplication">
         <activity android:name=".EntryActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -23,16 +23,12 @@
         </activity>
 
         <activity android:name=".ClassEntryActivity" android:taskAffinity="com.android.phone"/>
-        <activity android:name=".Activities.SchoolActivity" android:theme="@android:style/Theme.Holo.Light"/>
-        <activity android:name=".Activities.Student.StudentWaitingActivity"/>
-        <activity android:name=".Activities.Teacher.TeacherWaitingActivity"/>
-        <activity android:name=".Activities.Student.StudentProfileActivity"/>
-        <activity android:name=".Activities.Teacher.TeacherProfileActivity"/>
-        <activity android:name=".Activities.DialogBox"
+        <activity android:name=".SchoolActivity" android:theme="@android:style/Theme.Holo.Light"/>
+        <activity android:name=".Fragment.DialogBox"
                   android:label="DialogBox"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
 
-        <service android:name=".Service.ManagerRegistrationService"/>
+        <service android:name=".BroadCastReceiver.ManagerRegistrationService"/>
         <service android:name="com.parse.PushService" />
 
 
@@ -49,8 +45,8 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name=".BroadCastReceiver.NotificationClickBroadcastReceiver"/>
         <receiver android:name=".BroadCastReceiver.TelephonyBroadcastReceiver"/>
-
         <receiver android:name=".Communication.PushReceiver"/>
 
     </application>
