--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.MobileSchool"
+          package="com.example.MobileSchoolDev"
           android:versionCode="1"
           android:versionName="0.5">
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="16"/>
